Added, add word component into project.

--- a/SentenceBuilderWebApp/Pages/Word.razor
+++ b/SentenceBuilderWebApp/Pages/Word.razor
@@ -5,6 +5,8 @@
 <PageTitle>Words</PageTitle>
 
 <h1>Words</h1>
+
+<a class="btn btn-primary" href="/addword">Add Word</a>
 <div>
     <label>Select Word Type: </label>
     @if (WordTypes != null)
