--- a/SentenceBuilderWebApp/Shared/NavMenu.razor
+++ b/SentenceBuilderWebApp/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">SentenceBuilderWebApp</a>
+        <a class="navbar-brand" href="">Sentence Builder</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,18 +10,13 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="words">
-                <span class="oi oi-plus" aria-hidden="true"></span> Words
+                <span aria-hidden="true"></span> Words
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="sentences">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Sentences
+                <span aria-hidden="true"></span> Sentences
             </NavLink>
         </div>
     </nav>
