--- a/SentenceBuilderWebApp/Shared/BuildSentenceComponent.razor
+++ b/SentenceBuilderWebApp/Shared/BuildSentenceComponent.razor
@@ -23,7 +23,7 @@
                         <div class="col">
                             <h5>Word Type</h5>
                             <InputSelect ValueExpression="@(() => wordsWordToSentence.WordTypeId)" Value="@wordsWordToSentence.WordTypeId" ValueChanged="@((int value) => WordTypeChange(value))" class="form-select" >
-                                <option value="">Please Select a Word Type</option>
+                                <option value="0">Please Select a Word Type</option>
                                 @if(wordType != null || wordType.Count > 0)
                                 {
                                     @foreach(var item in wordType)
@@ -32,14 +32,13 @@
                                     }
                                 }
                             </InputSelect>
-                            <ValidationMessage For=@(() => wordsWordToSentence.WordTypeId) />
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <h5>Word</h5>
                             <InputSelect ValueExpression="@(() => wordsWordToSentence.WordId)" Value="@wordsWordToSentence.WordId" ValueChanged="@((int value) => WordChange(value))" class="form-select" >
-                                <option value="">Please Select a Word Type</option>
+                                <option value="0">Please Select a Word</option>
                                 @if(wordsByType != null || wordsByType.Count > 0)
                                 {
                                     @foreach(var item in wordsByType)
@@ -48,7 +47,6 @@
                                     }
                                 }
                             </InputSelect>
-                            <ValidationMessage For=@(() => wordsWordToSentence.WordId) />
                         </div>
                     </div>
                     <br />
@@ -121,6 +119,7 @@
         try
         {
             wordsByType = await api.GetWordsByTypeAsync(wordTypeId);
+            wordsByType = wordsByType.OrderBy(x => x.Word).ToList();
         }
         catch(Exception ex)
         {
@@ -132,9 +131,16 @@
     {
         try
         {
-            string addword = wordsByType.Where(x => x.WordId == wordsWordToSentence.WordId).FirstOrDefault().Word;
-            addwordsToSentence.Add(addword);
-            toast.ShowSuccess("Added word to sentence!");
+            if(wordsWordToSentence.WordId > 0)
+            {
+                string addword = wordsByType.Where(x => x.WordId == wordsWordToSentence.WordId).FirstOrDefault().Word;
+                addwordsToSentence.Add(addword);
+                toast.ShowSuccess("Added word to sentence!");
+            }
+            else
+            {
+                toast.ShowWarning("Please select type and word to add to sentence.");
+            }
         }
         catch(Exception ex)
         {
@@ -154,6 +160,10 @@
                     sentence = sentence + item + " ";
                 }
             }
+            else
+            {
+                toast.ShowWarning("Please select type and word to add to sentence.");
+            }
 
             if(sentence != string.Empty)
             {
@@ -163,6 +173,10 @@
                 {
                     toast.ShowSuccess("Created new sentence!");
                     navigate.NavigateTo("/sentences");
+                }
+                else
+                {
+                    toast.ShowError("Could not create sentence please try again.");
                 }
             }
 
